--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <h1>Projeto Principal</h1>
-        <a href="#"><p>Arthur Santos Azevedo</p></a>
+        <p><a href="#"></a>Arthur Santos Azevedo</a></p>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>Sobre mim</li>
-                <li>Projetos</li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre mim</a></li>
+                <li><a href="#">Projetos</a></li>
             </ul>
         </nav>
     </header>
