Finalizando o CSS da página inicial

--- a/index.html
+++ b/index.html
@@ -6,28 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Principal</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
     <header>
         <h1>Projeto Principal</h1>
-        <p><a href="#"></a>Arthur Santos Azevedo</a></p>
-        <nav>
+        <p><a href="#" target="_blank">Arthur Santos Azevedo</a></p>
+        <menu>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre mim</a></li>
-                <li><a href="#">Projetos</a></li>
+                <a href="index.html" target="_self"><li>Inicio</li></a>
+                <a href="#"><li>Sobre mim</li></a>
+                <a href="#"><li>Projetos</li></a>
             </ul>
-        </nav>
+        <menu>
     </header>
     <main>
-        <article>
+        <section id="normal">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ipsa velit corrupti voluptatem, non dolorum animi saepe asperiores. Qui inventore consectetur nisi, rerum ullam expedita ratione harum iure aspernatur culpa?
+                Sonho incessante que fumega este <br>
+                campo inóspito em ilusões.
+                Repleto <br>
+                de um sono que quebra e se encaixa <br>
+                em fragos, que roubam a minha paz, <br>
+                furtam a calmaria deste terreno <br>
+                arrasado.
             </p>
-        </article>
+        </section>
+        <section id="imagem">
+            <p>
+                Cinza, os dias são cinzas frias e <br>
+                secas do que uma noite foi um <br>
+                clarear de estrelas afiadas e <br>
+                completamente mestiças em suas <br>
+                cores e cheios.
+            </p>
+        </section>
+        <section id="normal">
+            <p>
+                Oh meu calar da noite, meu <br>
+                alvorecer aconchegante,<br> tangenciando
+                todo seu amor <br>
+                em nossas órbitas tênues, voláteis.
+            </p>
+        </section>
+        <section id="imagem">
+            <p>
+                Ligadas em uma série cromática de <br>
+                vibrações em teu corpo, já calejado <br>
+                deste ser e querer, destas aves <br>
+                desgastadas, pintadas com essa <br>
+                tinta sem cor, fria, vazia com dor.
+            </p>
+        </section>
     </main>
     <footer>
-        <p>Criado por Arthur Santos Azevedo</p>
+        <p>Criado por <a href="#" target="_parent">Arthur Santos Azevedo</a></p>
     </footer>
 </body>
 </html>
