--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Projeto Principal</h1>
-        <p><a href="#" target="_blank">Arthur Santos Azevedo</a></p>
+        <p><a href="https://github.com/ArthurSantos18" target="_blank">Arthur Santos Azevedo</a></p>
         <menu>
             <ul>
                 <a href="index.html" target="_self"><li>Inicio</li></a>
