Alguns links e tamanho da fonte

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
     </main>
     <footer>
-        <p>Criado por <a href="#" target="_parent">Arthur Santos Azevedo</a></p>
+        <p>Criado por <a href="https://github.com/ArthurSantos18" target="_blank">Arthur Santos Azevedo</a></p>
     </footer>
 </body>
 </html>
