Algumas mudanças de conteúdo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <header>
-        <h1>Projeto Principal</h1>
+        <h1>Cartas Cremadas</h1>
         <p><a href="https://github.com/ArthurSantos18" target="_blank">Arthur Santos Azevedo</a></p>
+        <p id="Zag">
+            Autor do poema: <a href="https://www.instagram.com/zynmaia/?next=%2F" target="_blank">Zag Bertim Maia Santos</a>
+        </p>
         <menu>
             <ul>
                 <a href="index.html" target="_self"><li>Inicio</li></a>
-                <a href="#"><li>Sobre mim</li></a>
                 <a href="#"><li>Projetos</li></a>
             </ul>
         <menu>
