Criação da página de projetos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <menu>
             <ul>
                 <a href="index.html" target="_self"><li>Inicio</li></a>
-                <a href="#"><li>Projetos</li></a>
+                <a href="projetos.html" target="_parent"><li>Projetos</li></a>
             </ul>
         <menu>
     </header>
