Página de Projetos

--- a/projetos.html
+++ b/projetos.html
@@ -20,7 +20,21 @@
         <menu>
     </header>
     <main>
-            
+        <a href="https://github.com/ArthurSantos18/Miniprojetos-python" target="_blank">
+            <div id="python">
+                <img src="imagens2/Python.png" alt="Python.png">
+                <p>Mini-projetos em Python</p>
+            </div>
+        </a>
+        <a href="https://arthursantos18.github.io/Principal-Login/" target="_blank">
+            <div id="login">
+                <img src="imagens2/login.png" alt="login.png">
+                <p>Tela de Login HTML5/CSS3</p>
+            </div>
+        </a>
     </main>
+    <footer>
+        <p>Criado por <a href="https://github.com/ArthurSantos18" target="_blank">Arthur Santos Azevedo</a></p>
+    </footer>
 </body>
 </html>
